# rust_rest_api_jwt

./: .gitignore  Cargo.toml  diesel.toml
migrations/2024-08-10-054304_create_users_table/: up.sql
migrations/2024-08-12-230106_create_refresh_tokens/: up.sql
src/: main.rs  schema.rs
src/api/: account_controller.rs  auth_api.rs  mod.rs  user_api.rs  user_request.rs
src/config/: app.rs  db.rs  mod.rs  routes.rs
src/controllers/: auth.rs
src/errors/: mod.rs
src/handler/: error_handler_middleware.rs  mod.rs
src/middlewares/: authentication.rs
src/models/: pagination.rs  user.rs  user_model.rs  user_token.rs
src/services/: account_service.rs  auth.rs
src/utils/: token_utils.rs
