[package]
name = "rest_api_todo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.2.1", features = ["postgres"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
jsonwebtoken = "8.1"
bcrypt = "0.10"
