[package]
name = "rest_api_todo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-files = "0.6.6"
env_logger = "0.7.1"
anyhow = "1.0.86"
chrono = { version = "0.4.20", features = ["serde"] }
diesel = { version = "2.2.2", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4"
dotenv = "0.15.0"
bcrypt = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-service = "2.0.2"   # Asegúrate de usar la versión correcta
futures = "0.3.30"         # Asegúrate de usar la versión correcta
jsonwebtoken = "8.3"
lazy_static = "1.4"
actix-http = "3.9.0"
actix-web-httpauth = "0.8.2"
validator = { version = "^0", features = ["derive"], default-features = false }
r2d2 = "0.8"
serde_derive = "1.0.111"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
actix-cors = "0.7.0"
derive_more = { default-features = false, version = "^0" }
reqwest = { version = "^0", features = ["json"], default-features = false }
log = "^0"
log4rs = { features = ["config_parsing", "serde_yaml", "yaml_format", "console_appender", "file_appender"], default-features = false, version = "^1" }
actix-web-grants = "4.1.1"
